# InternshipOnFEniCS

./: CMakeLists.txt  Plas3D.h  Plas3D.ufl  main.cpp
src/: AnbaConstitutiveUpdate.cpp  AnbaConstitutiveUpdate.h  CMakeLists.txt  ConstitutiveUpdate.cpp  ConstitutiveUpdate.h  FenicsSolidMechanics.h  HistoryData.cpp  HistoryData.h  PlasticityModel.cpp  PlasticityModel.h  PlasticityProblem.cpp  PlasticityProblem.h  QuadratureData.cpp  QuadratureData.h  QuadratureFunction.cpp  QuadratureFunction.h  ReturnMapping.cpp  UFLAssociatedPlasticityModel.cpp  UFLQuadratureFunction.cpp  UFLQuadratureFunction.h  UFLReturnMapping.cpp  UFLReturnMapping.h  utils.cpp  utils.h
